# mlcfoundation.github.io

./: .gitignore  404.html  CNAME  Pipfile  ijpd.md.disabled  ijpd.md.ignore  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: deploy.yml
about/contact/: index.html
about/experts/: index.html
about/facilities/: index.html
about/trustees/: index.html
activities/seminars/: index.html
activities/studies/: index.html
docs/: ijpd.md  index.md
docs/about/: contact.md  experts.md  facilities.md  trustees.md
docs/activities/: seminars.md  studies.md
docs/ijpd/: archives.md  contact.md  editors.md  issues.md  journal.md  policy.md  submission.md
docs/research/: fhpl.md  fppe.md  nfhs.md  publications.md
ijpd/: index.html
ijpd/archives/: index.html
ijpd/contact/: index.html
ijpd/editors/: index.html
ijpd/issues/: index.html
ijpd/journal/: index.html
ijpd/policy/: index.html
ijpd/submission/: index.html
research/fhpl/: index.html
research/fppe/: index.html
research/nfhs/: index.html
research/publications/: index.html
search/: search_index.json
