[tool.poetry]
name = "mlcfoundation-github-io"
version = "0.1.0"
description = ""
authors = ["Akshay Ranjan <akshay.ranjan@gmail.com>"]
readme = "README.md"
packages = [{include = "mlcfoundation"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-windmill = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
